# oteapi-core

./: .bandit  .codecov.yml  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  .sftp_conf_example.json  CHANGELOG.md  Dockerfile  Dockerfile_tasks  LICENSE  MANIFEST.in  README.md  README.rst  build-dev.sh  docker-compose-dev.yml  docker-compose.yml  gitlab-ci.yml  main.py  mkdocs.yml  notate  plugins.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  scratch_launch-docker.sh  scratch_test-manually.ipynb  setup.cfg  setup.py  stable  tasks.py  test_catalog_to_delete  versions.json  wsgi.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/utils/: requirements_audit.txt  single_dependency_pr_body.txt  update_publish.sh
.github/workflows/: cd_release.yml  ci_automerge_dependabot.yml  ci_bot_pr_changes.yml  ci_cd_updated_master.yml  ci_check_dependencies.yml  ci_dependabot.yml  ci_tests.yml
0.0.4/: 404.html  index.html  sitemap.xml
0.0.4/CHANGELOG/: index.html
0.0.4/LICENSE/: index.html
0.0.4/all_models/: index.html
0.0.4/all_strategies/: index.html
0.0.5/: 404.html  index.html  sitemap.xml
0.0.5/CHANGELOG/: index.html
0.0.5/LICENSE/: index.html
0.0.5/all_models/: index.html
0.0.5/all_strategies/: index.html
0.0.6/: 404.html  index.html  objects.inv  sitemap.xml
0.0.6/CHANGELOG/: index.html
0.0.6/LICENSE/: index.html
0.0.6/all_models/: index.html
0.0.6/all_strategies/: index.html
0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
0.1.0/CHANGELOG/: index.html
0.1.0/LICENSE/: index.html
0.1.0/all_models/: index.html
0.1.0/all_strategies/: index.html
0.1.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1.1/CHANGELOG/: index.html
0.1.1/LICENSE/: index.html
0.1.1/all_models/: index.html
0.1.1/all_strategies/: index.html
0.1.2/: 404.html  index.html  sitemap.xml
0.1.2/CHANGELOG/: index.html
0.1.2/LICENSE/: index.html
0.1.2/all_models/: index.html
0.1.2/all_strategies/: index.html
0.1.2/search/: search_index.json
0.1.3/: 404.html  index.html  objects.inv  sitemap.xml
0.1.3/CHANGELOG/: index.html
0.1.3/LICENSE/: index.html
0.1.3/all_models/: index.html
0.1.3/all_strategies/: index.html
0.1.3/search/: search_index.json
0.1.4/: 404.html  index.html  sitemap.xml
0.1.4/CHANGELOG/: index.html
0.1.4/LICENSE/: index.html
0.1.4/all_models/: index.html
0.1.4/all_strategies/: index.html
0.1.4/search/: search_index.json
0.1.5/: 404.html  index.html  sitemap.xml
0.1.5/CHANGELOG/: index.html
0.1.5/LICENSE/: index.html
0.1.5/all_models/: index.html
0.1.5/all_strategies/: index.html
0.1.5/search/: search_index.json
0.1.6/: 404.html  index.html  objects.inv  sitemap.xml
0.1.6/CHANGELOG/: index.html
0.1.6/LICENSE/: index.html
0.1.6/all_models/: index.html
0.1.6/all_strategies/: index.html
0.1.6/search/: search_index.json
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/CHANGELOG/: index.html
0.2.0/LICENSE/: index.html
0.2.0/all_models/: index.html
0.2.0/all_strategies/: index.html
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/CHANGELOG/: index.html
0.2.1/LICENSE/: index.html
0.2.1/all_models/: index.html
0.2.1/all_strategies/: index.html
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/CHANGELOG/: index.html
0.3.0/LICENSE/: index.html
0.3.0/all_models/: index.html
0.3.0/all_strategies/: index.html
0.4.0/: 404.html  index.html  sitemap.xml
0.4.0/CHANGELOG/: index.html
0.4.0/LICENSE/: index.html
0.4.0/all_models/: index.html
0.4.0/all_strategies/: index.html
0.4.0/search/: search_index.json
0.4.1/: 404.html  index.html  sitemap.xml
0.4.1/CHANGELOG/: index.html
0.4.1/LICENSE/: index.html
0.4.1/all_models/: index.html
0.4.1/all_strategies/: index.html
0.4.2/: 404.html  index.html  sitemap.xml
0.4.2/CHANGELOG/: index.html
0.4.2/LICENSE/: index.html
0.4.2/all_models/: index.html
0.4.2/all_strategies/: index.html
0.4.2/search/: search_index.json
0.4.3/: 404.html  index.html  sitemap.xml
0.4.3/CHANGELOG/: index.html
0.4.3/LICENSE/: index.html
0.4.3/all_models/: index.html
0.4.3/all_strategies/: index.html
0.4.3/search/: search_index.json
0.4.4/: 404.html  index.html  objects.inv  sitemap.xml
0.4.4/CHANGELOG/: index.html
0.4.4/LICENSE/: index.html
0.4.4/all_models/: index.html
0.5.0/: 404.html  index.html  objects.inv  sitemap.xml
0.5.1/: 404.html  index.html  sitemap.xml
0.5.2/: 404.html  index.html  sitemap.xml
0.6.0/: 404.html  index.html  objects.inv  sitemap.xml
0.6.1/: 404.html  index.html  sitemap.xml
0.7.0/: 404.html  index.html  sitemap.xml
0.7.0.dev0/: 404.html  index.html  objects.inv  sitemap.xml
0.7.0.dev1/: 404.html  index.html  objects.inv  sitemap.xml
0.7.0.dev2/: 404.html  index.html  sitemap.xml
0.7.0.dev3/: 404.html  index.html  sitemap.xml
0.7.0.dev4/: 404.html  index.html  sitemap.xml
0.7.0.dev5/: 404.html  index.html  objects.inv  sitemap.xml
0.7.0.dev6/: 404.html  index.html  sitemap.xml
1.0.0/: 404.html  index.html  sitemap.xml
1.0.1/: 404.html  index.html  sitemap.xml
1.0.2/: 404.html  index.html  sitemap.xml
app/: __init__.py  factory.py  idownloadstrategy.py  iparsestrategy.py  itransformationstrategy.py
app/cache/: cache.py
docs/: .pages  all_models.md  all_strategies.md  index.md
entities/: Image.json  PoreFraction.json
latest/: 404.html  index.html  objects.inv  sitemap.xml
models/: downloadconfig.py
ontotrans/: datasource.py  transformation.py
oteapi/: README.md  __init__.py  settings.py
python-mapping-plugins/: blob2image.py
python_mapping_plugins/: blob2image.py
requirements/: dev.txt  prod.txt
routers/: dataresource.py  mapping.py  pipe.py  test.py  transformation.py
strategy/: ifilterstrategy.py
tests/: conftest.py  dummycache.py  test_dataresource.py  test_dummyapp.py  test_filter.py  test_main.py  test_mapping.py  test_redis.py  test_session.py  test_sftp.py  test_transformation.py
(+1717 files in other folders)
