[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "oteapi-core"
authors = [
    {name = "SINTEF", email = "Team4.0@SINTEF.no"},
]
description = "Open Translation Environment (OTE) API."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
]
keywords = ["OTE", "OTE-API"]
requires-python = ">=3.9"
dynamic = ["version"]

dependencies = [
    # Core dependencies
    "agraph-python>=102.0.0,<103",
    "diskcache>=5.6.3,<6",
    "pydantic~=1.10",
    "typing-extensions~=4.12; python_version < '3.10'",

    # Strategy dependencies
    "celery>=5.3.5,<6",
    "openpyxl>=3.1.2,<4",
    "Pillow>=10.1.0,<11",
    "psycopg>=3.1.19,<3.3.0",
    "pysftp~=0.2.9",
    "requests>=2.31.0,<3",
    "urllib3<2",
]

[project.optional-dependencies]
docs = [
    "mike~=2.1",
    "mkdocs>=1.5.3,<1.7",
    "mkdocs-autorefs~=1.2",
    "mkdocs-awesome-pages-plugin~=2.9",
    "mkdocs-material>=9.5.5,<10",
    "mkdocstrings[python]~=0.26.0",
]
testing = [
    "ase~=3.23.0",
    "numpy>=1.26,<3",
    "pytest~=8.3",
    "pytest-celery[redis]~=1.1",
    "pytest-cov>=4.1.0,<6",
    "redis~=5.0",
    "requests-mock~=1.12",
]
dev = [
    "pre-commit~=4.0",
    "oteapi-core[docs,testing]",
]

[project.urls]
Home = "https://github.com/EMMC-ASBL/oteapi-core"
Documentation = "https://EMMC-ASBL.github.io/oteapi-core"
Source = "https://github.com/EMMC-ASBL/oteapi-core"
"Issue Tracker" = "https://github.com/EMMC-ASBL/oteapi-core/issues"
Changelog = "https://github.com/EMMC-ASBL/oteapi-core/blob/master/CHANGELOG.md"
Package = "https://pypi.org/project/oteapi-core"

# Entry points, i.e., strategy registration
[project.entry-points."oteapi.download"]
"oteapi.file" = "oteapi.strategies.download.file:FileStrategy"
"oteapi.http" = "oteapi.strategies.download.https:HTTPSStrategy"
"oteapi.https" = "oteapi.strategies.download.https:HTTPSStrategy"
"oteapi.ftp" = "oteapi.strategies.download.sftp:SFTPStrategy"
"oteapi.sftp" = "oteapi.strategies.download.sftp:SFTPStrategy"
[project.entry-points."oteapi.filter"]
"oteapi.filter/crop" = "oteapi.strategies.filter.crop_filter:CropImageFilter"
"oteapi.filter/sql" = "oteapi.strategies.filter.sql_query_filter:SQLQueryFilter"
[project.entry-points."oteapi.mapping"]
"oteapi.triples" = "oteapi.strategies.mapping.mapping:MappingStrategy"
[project.entry-points."oteapi.parse"]
"oteapi.application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" = "oteapi.strategies.parse.excel_xlsx:XLSXParseStrategy"
"oteapi.image/jpg" = "oteapi.strategies.parse.image:ImageDataParseStrategy"
"oteapi.image/jpeg" = "oteapi.strategies.parse.image:ImageDataParseStrategy"
"oteapi.image/jp2" = "oteapi.strategies.parse.image:ImageDataParseStrategy"
"oteapi.image/png" = "oteapi.strategies.parse.image:ImageDataParseStrategy"
"oteapi.image/gif" = "oteapi.strategies.parse.image:ImageDataParseStrategy"
"oteapi.image/tiff" = "oteapi.strategies.parse.image:ImageDataParseStrategy"
"oteapi.image/eps" = "oteapi.strategies.parse.image:ImageDataParseStrategy"
"oteapi.application/vnd.sqlite3" = "oteapi.strategies.parse.application_vnd_sqlite:SqliteParseStrategy"
"oteapi.text/csv" = "oteapi.strategies.parse.text_csv:CSVParseStrategy"
"oteapi.application/json" = "oteapi.strategies.parse.application_json:JSONDataParseStrategy"
"oteapi.application/postgres" = "oteapi.strategies.parse.postgres:PostgresResourceStrategy"
[project.entry-points."oteapi.transformation"]
"oteapi.celery/remote" = "oteapi.strategies.transformation.celery_remote:CeleryRemoteStrategy"

[tool.flit.module]
name = "oteapi"

[tool.flit.sdist]
exclude = [
    ".github/",
    "tests/",
    ".gitignore",
    ".pre-commit-config.yaml",
    ".codecov.yml",
]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
scripts_are_modules = true
warn_unused_configs = true
show_error_codes = true
allow_redefinition = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-rs --cov-report=term"
filterwarnings = [
    "ignore:.*imp module.*:DeprecationWarning",
    "ignore:.*_yaml extension module.*:DeprecationWarning"
]
