[options.entry_points]
oteapi.scheme =
  oteapi.file = oteapi.strategies.download.file:FileStrategy
  oteapi.http = oteapi.strategies.download.https:HTTPSStrategy
  oteapi.https = oteapi.strategies.download.https:HTTPSStrategy
  oteapi.ftp = oteapi.strategies.download.sftp:SFTPStrategy
  oteapi.sftp = oteapi.strategies.download.sftp:SFTPStrategy
oteapi.filterType =
  oteapi.filter/crop = oteapi.strategies.filter.crop_filter:CropFilter
  oteapi.filter/sql = oteapi.strategies.filter.sql_query_filter:SQLQueryFilter
oteapi.mediaType =
  oteapi.application/vnd.openxmlformats-officedocument.spreadsheetml.sheet = oteapi.strategies.parse.excel_xlsx:XLSXParseStrategy
  oteapi.image/jpg = oteapi.strategies.parse.image_jpeg:ImageDataParseStrategy
  oteapi.image/jpeg = oteapi.strategies.parse.image_jpeg:ImageDataParseStrategy
  oteapi.image/j2p = oteapi.strategies.parse.image_jpeg:ImageDataParseStrategy
  oteapi.image/png = oteapi.strategies.parse.image_jpeg:ImageDataParseStrategy
  oteapi.image/gif = oteapi.strategies.parse.image_jpeg:ImageDataParseStrategy
  oteapi.image/tiff = oteapi.strategies.parse.image_jpeg:ImageDataParseStrategy
  oteapi.image/eps = oteapi.strategies.parse.image_jpeg:ImageDataParseStrategy
  oteapi.application/vnd.sqlite3 = oteapi.strategies.parse.application_vnd_sqlite:SqliteParseStrategy
  oteapi.text/csv = oteapi.strategies.parse.text_csv:CSVParseStrategy
  oteapi.text/json = oteapi.strategies.parse.text_json:JSONDataParseStrategy
oteapi.transformation_type =
  oteapi.celery/remote = oteapi.strategies.transformation.celery_remote:CeleryRemoteStrategy
