[options.entry_points]
oteapi.download_strategy =
  core.file = oteapi.strategies.download.file
  core.https = oteapi.strategies.download.https
  core.sftp = oteapi.strategies.download.sftp
oteapi.filter_strategy =
  core.crop = oteapi.strategies.filter.crop_filter
  core.sql_query = oteapi.strategies.filter.sql_query_filter
oteapi.parse_strategy =
  core.excel.xlsx = oteapi.strategies.parse.excel_xlsx
  core.image.jpeg = oteapi.strategies.parse.image
  core.image.jpg = oteapi.strategies.parse.image
  core.image.jp2 = oteapi.strategies.parse.image
  core.image.png = oteapi.strategies.parse.image
  core.image.gif = oteapi.strategies.parse.image
  core.image.tiff = oteapi.strategies.parse.image
  core.image.eps = oteapi.strategies.parse.image
  core.sqlite = oteapi.strategies.parse.application_vnd_sqlite
  core.text.csv = oteapi.strategies.parse.text_csv
  core.text.json = oteapi.strategies.parse.application_json
oteapi.transformation_strategy =
  core.celery = oteapi.strategies.transformation.celery_remote
