[options.entry_points]
oteapi.download =
  oteapi.file = oteapi.strategies.download.file:FileStrategy
  oteapi.http = oteapi.strategies.download.https:HTTPSStrategy
  oteapi.https = oteapi.strategies.download.https:HTTPSStrategy
  oteapi.ftp = oteapi.strategies.download.sftp:SFTPStrategy
  oteapi.sftp = oteapi.strategies.download.sftp:SFTPStrategy
oteapi.mapping =
  oteapi.triples = oteapi.strategies.mapping.mapping:MappingStrategy
oteapi.filter =
  oteapi.filter/crop = oteapi.strategies.filter.crop_filter:CropImageFilter
  oteapi.filter/sql = oteapi.strategies.filter.sql_query_filter:SQLQueryFilter
oteapi.parse =
  oteapi.application/vnd.openxmlformats-officedocument.spreadsheetml.sheet = oteapi.strategies.parse.excel_xlsx:XLSXParseStrategy
  oteapi.image/jpg = oteapi.strategies.parse.image:ImageDataParseStrategy
  oteapi.image/jpeg = oteapi.strategies.parse.image:ImageDataParseStrategy
  oteapi.image/jp2 = oteapi.strategies.parse.image:ImageDataParseStrategy
  oteapi.image/png = oteapi.strategies.parse.image:ImageDataParseStrategy
  oteapi.image/gif = oteapi.strategies.parse.image:ImageDataParseStrategy
  oteapi.image/tiff = oteapi.strategies.parse.image:ImageDataParseStrategy
  oteapi.image/eps = oteapi.strategies.parse.image:ImageDataParseStrategy
  oteapi.application/vnd.sqlite3 = oteapi.strategies.parse.application_vnd_sqlite:SqliteParseStrategy
  oteapi.text/csv = oteapi.strategies.parse.text_csv:CSVParseStrategy
  oteapi.application/json = oteapi.strategies.parse.application_json:JSONDataParseStrategy
oteapi.transformation =
  oteapi.celery/remote = oteapi.strategies.transformation.celery_remote:CeleryRemoteStrategy
